--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ ul {
   --main-bcg-cl: #2f303a;
   --srcond-bcg-cl: #f5f4fa;
   --col-bcg-11: #188ce8;
+  --col-grad-12: rgba(47, 48, 58, 0.4);
 
   /* Інше */
   --col-bd-11: #ececec;
@@ -152,7 +153,7 @@ img {
 
 .head-section {
   background-color: var(--main-bcg-cl);
-  padding: 200px 0;
+  /* padding: 200px 0; */
 }
 .main-title {
   font-weight: 900;
@@ -195,6 +196,18 @@ img {
   background-color: var(--col-bcg-11);
 }
 
+.overlay {
+  max-width: 1600px;
+  height: 600px;
+  padding: 200px 0;
+  margin-left: auto;
+  margin-right: auto;
+  background-image: linear-gradient(to bottom, var(--col-grad-12), var(--col-grad-12)),
+    url(../img/img-bcg-hero.jpg);
+}
+.overlay:hover {
+  background-image: url(../img/img-bcg-hero.jpg);
+}
 /* Секція - Перелік переваг Студії */
 
 /* Приховує заголовоки по всьому сайту */
@@ -339,6 +352,8 @@ img {
 .button-portfolio:focus {
   background-color: var(--link-cl-txt);
   color: var(--ligt-cl-txt);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .list-btns {
