--- a/css/style.css
+++ b/css/style.css
@@ -380,6 +380,7 @@ img {
   color: var(--second-cl-txt);
 }
 .link-project {
+  display: inline-block;
   text-decoration: none;
 }
 
@@ -400,6 +401,12 @@ img {
   width: 370px;
   margin-bottom: 30px;
   margin-right: 30px;
+}
+
+.link-project:hover,
+.link-project:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 /* .item-project:nth-last-child(-n + 3) {
   margin-bottom: 0;
