--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,23 @@ img {
   padding-bottom: 32px;
 }
 
+.decor-mail::before {
+  /* content: '';
+  width: 16px;
+  height: 16px;
+
+  background-size: contain;
+  display: inline-flex;
+  /* background-position: center; */
+  /* background-repeat: no-repeat; */
+  /* background-color: tomato; */
+  /* background-image: url(../img/project1.jpg); */
+  /* margin-right: 6px; */
+}
+
+.dercor-tel {
+}
+
 .link:hover,
 .link:focus {
   color: var(--link-cl-txt);
@@ -127,7 +144,8 @@ img {
 .navigation {
   display: flex;
   align-items: center;
-  margin-right: 344px;
+  /* 344 */
+  margin-right: auto;
 }
 
 .list.list-contact {
