Задает высоту и ширину иконкам секция Приемущество в HTML

--- a/css/style.css
+++ b/css/style.css
@@ -266,10 +266,10 @@ img {
   align-items: center;
   justify-content: center;
 }
-.icon-advantage {
+/* .icon-advantage {
   width: 70px;
   height: 70px;
-}
+} */
 
 /* Секція - Перелік послуг */
 .title-team-services {
